--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       member: 会員情報
+      article: ニュース記事
     attributes:
       member:
         number: 背番号
@@ -16,6 +17,12 @@ ja:
         current_password: 現在のパスワード
         password: 新しいパスワード
         password_confirmation: 新しいパスワードの確認
+      article:
+        title: タイトル
+        body: 本文
+        relesed_at: 掲載開始日時
+        expired_at: 掲載終了日時
+        member_only: 会員限定
     errors:
       messages:
         invalid_member_name: は半角英数字で入力してください。
