--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,6 +3,7 @@ ja:
     models:
       member: 会員情報
       article: ニュース記事
+      entry: ブログ記事
     attributes:
       member:
         number: 背番号
@@ -20,10 +21,18 @@ ja:
       article:
         title: タイトル
         body: 本文
-        relesed_at: 掲載開始日時
+        released_at: 掲載開始日時
         expired_at: 掲載終了日時
         no_expiration: 掲載終了日時を設定しない
         member_only: 会員限定
+      entry:
+        title: タイトル
+        body: 本文
+        posted_at: 日時
+        status: 状態
+        status_draft: 下書き
+        status_member_only: 会員限定
+        status_public: 公開
     errors:
       messages:
         invalid_member_name: は半角英数字で入力してください。
